Fixed overflowing day names in mobile view

--- a/css/main.css
+++ b/css/main.css
@@ -296,9 +296,6 @@ section.forecast div.divisor div.toggle-forecast button span {
 section.forecast div.divisor div.toggle-forecast button.active span {
   color: #f0f0f0;
 }
-section.forecast div.divisor div.toggle-forecast button:hover {
-  cursor: pointer;
-}
 section.forecast div.divisor div.toggle-forecast div.divider {
   height: 100%;
   width: 2px;
@@ -310,16 +307,19 @@ section.forecast div.divisor div.dividing-line {
   height: 2px;
   background-color: #f0f0f0;
 }
-section.forecast div.tiles {
+section.forecast div.tiles > div {
   margin-top: 0.5rem;
   display: flex;
   flex-direction: row;
 }
-section.forecast div.tiles div.tile {
+section.forecast div.tiles > div div.tile {
   width: 3rem;
   margin-right: 0.5rem;
 }
-section.forecast div.tiles div.tile div.weatherType {
+section.forecast div.tiles > div div.tile div.full {
+  display: none;
+}
+section.forecast div.tiles > div div.tile div.weatherType {
   margin: 0.4rem 0;
   width: 2.8rem;
   height: 2.8rem;
@@ -330,26 +330,36 @@ section.forecast div.tiles div.tile div.weatherType {
   justify-content: center;
   align-items: center;
 }
-section.forecast div.tiles div.tile div.weatherType i {
+section.forecast div.tiles > div div.tile div.weatherType i {
   font-size: 1.75rem;
 }
 
 @media (min-width: 1200px) {
-  section.forecast div.tiles {
+  section.forecast div.tiles > div {
     margin-top: 1.25rem;
   }
-  section.forecast div.tiles div.tile {
+  section.forecast div.tiles > div div.tile {
     width: 3.5rem;
     margin-right: 3rem;
   }
-  section.forecast div.tiles div.tile div.weatherType {
+  section.forecast div.tiles > div div.tile div.full {
+    display: block;
+  }
+  section.forecast div.tiles > div div.tile div.short {
+    display: none;
+  }
+  section.forecast div.tiles > div div.tile div.weatherType {
     width: 4rem;
     height: 4rem;
   }
-  section.forecast div.tiles div.tile div.weatherType i {
+  section.forecast div.tiles > div div.tile div.weatherType i {
     font-size: 2.25rem;
   }
 }
+.hidden {
+  display: none !important;
+}
+
 body {
   width: 100vw;
   height: 100vh;
